--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <div class="left-content">
                 <div class="profile-details">
                     <div class="profile-image">
-                        <img src="./image/sulagna.shuin.jpg" alt="profile-image">
+                        <img src="image/sulagna.shuin.jpg" alt="profile-image">
                     </div>
                     <div class="name">Sulagna Shuin</div>
-                    <div class="designation">Full Stack Developer</div>
+                    <div class="designation">MERN Stack Developer</div>
                     <hr>
-                    <div class="description">Full Stack Developer</div>
+                    <div class="description">DSA | MERN Stack</div>
                 </div>
                 <div class="contact-info">
                     <div class="contact-item">
@@ -98,17 +98,11 @@
             <div class="right-main-content">
                 <section class="about sect">
                     <h2 class="right-title">About Me</h2>
-                    <p class="para">Currently, I am a student of newton school for Full Stack development as I
-                        always wanted to work in software development.
+                    <p class="para">Currently, I am a student of newton school for Full Stack development as I always
+                        wanted to work in software development.
 
-                        Previously, completed my management study from University of MAKAUT.
-
-                        Previously, I had worked management employee from the same industry.
-
-                        Now, I am gaining new skills for full stack development and advancing my knowledge and Approach
-                        in Data Structure and Algorithms. Apart from Full Stack Development, I also had interests in AI,
-                        Machine Learning, Deep Learning, Human Computer Interaction and web 3.0 and working in some
-                        projects in order to showcase my skill sets.</p>
+                        Previously, completed my BHM from the University of MAKAUT.
+                        Previously, I had worked as management employee in same industry.</p>
                 </section>
                 <section class="education sect">
                     <h2 class="right-title">Education</h2>
